--- a/package.json
+++ b/package.json
@@ -28,14 +28,17 @@
   },
   "dependencies": {
     "abort-controller": "^3.0.0",
+    "decompress": "^4.2.1",
+    "decompress-targz": "^4.1.1",
+    "decompress-unzip": "^4.0.1",
     "node-fetch": "^2.6.0",
     "readdirp": "^3.4.0",
     "rimraf": "^3.0.2",
     "semver": "^7.3.2",
-    "unzipper": "^0.10.11",
     "which": "^2.0.2"
   },
   "devDependencies": {
+    "@types/decompress": "^4.2.4",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.7",
     "@types/node-static": "^0.7.3",
