--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0-beta.1",
   "description": "Lib for VS Code extensions installing executables from GitHub",
   "main": "out/src/index.js",
+  "types": "out/src/index.d.ts",
   "files": [
-    "out/src/index.d.ts"
+    "out"
   ],
   "keywords": [
     "download",
